--- a/index.html
+++ b/index.html
@@ -1,17 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8" />
-	<title>React</title>
-</head>
-<body>
-<div id="container">Container</div>
-
-<script src="js/mainifest.js"></script>
-
-<script src="js/vendor.js"></script>
-
-<script src="js/app.js"></script>
-
-</body>
+  <head></head>
+  <body>
+    <script src="./js/mainifest.js"></script>
+    <script type="text/javascript" src="./js/vendors.js" charset="utf-8"></script>
+    <script type="text/javascript" src="./js/index.js" charset="utf-8"></script>
+  </body>
 </html>
+
